--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
                                 <h4>いろふさん</h4>
-                                <p>大阪を中心に仕事している、普通のプログラマです。</p>
+                                <p>大阪を中心に仕事している、普通のプログラマです。 </p>
                                 <p>関西Javaエンジニアの会の中の人</p>
                                 <p>主に業務webアプリの開発をしてきました。</p>
                             </div>
@@ -104,7 +104,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>現場で使える！実践Git(うらがみさん)</td>
+                                    <td>めざせ脱初心者！現場で使える！実践Git(うらがみさん)</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
